Fixed spacing
I removed some of the spacing between the two h1 elements so that
they would sit closer together. It looks better now.

--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,17 @@ button {
   background-color: #333999;
 }
 
-h1 {
+.banner {
   color: #1E90FF;
   font-size: 3rem;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.sub-banner {
+  color: #1E90FF;
+  font-size: 3rem;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -154,7 +162,8 @@ td {
   #dollar-amount {
     font-size: 5rem;
   }
-  h1 {
+  .banner,
+  .sub-banner {
     font-size: 5rem;
   }
   th,
